{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 95,
  "lineage": "19ab719f-2c75-7661-b3f3-5406ee0fc087",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "poc01_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418044666:internet-gateway/igw-03f69afbc0d6fe4bb",
            "id": "igw-03f69afbc0d6fe4bb",
            "owner_id": "905418044666",
            "tags": {
              "Name": "poc01-igw",
              "environment": "poc01"
            },
            "tags_all": {
              "Name": "poc01-igw",
              "environment": "poc01"
            },
            "vpc_id": "vpc-07f595036249ffb37"
          },
          "dependencies": [
            "aws_vpc.poc01_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "poc01_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418044666:route-table/rtb-06a3f88640cef1c89",
            "id": "rtb-06a3f88640cef1c89",
            "owner_id": "905418044666",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03f69afbc0d6fe4bb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "poc01-public-route-table",
              "environment": "poc01"
            },
            "tags_all": {
              "Name": "poc01-public-route-table",
              "environment": "poc01"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f595036249ffb37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.poc01_igw",
            "aws_vpc.poc01_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "poc01_private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef0e983f68f56eea",
            "route_table_id": "rtb-06a3f88640cef1c89",
            "subnet_id": "subnet-0fe2d105d994402eb"
          },
          "dependencies": [
            "aws_internet_gateway.poc01_igw",
            "aws_route_table.poc01_public_route_table",
            "aws_subnet.poc01_private_subnet",
            "aws_vpc.poc01_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c63d73323303080b",
            "route_table_id": "rtb-06a3f88640cef1c89",
            "subnet_id": "subnet-0817a75762a4dd89a"
          },
          "dependencies": [
            "aws_internet_gateway.poc01_igw",
            "aws_route_table.poc01_public_route_table",
            "aws_subnet.poc01_private_subnet",
            "aws_vpc.poc01_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "poc01_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418044666:security-group/sg-060fa4f55d24449ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060fa4f55d24449ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240921105717093100000003",
            "name_prefix": "terraform-",
            "owner_id": "905418044666",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "poc01-ec2-sg",
              "environment": "poc01"
            },
            "tags_all": {
              "Name": "poc01-ec2-sg",
              "environment": "poc01"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f595036249ffb37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.poc01_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "poc01_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418044666:subnet/subnet-0fe2d105d994402eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe2d105d994402eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418044666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc01-private-subnet-1",
              "environment": "poc01"
            },
            "tags_all": {
              "Name": "poc01-private-subnet-1",
              "environment": "poc01"
            },
            "vpc_id": "vpc-07f595036249ffb37"
          },
          "dependencies": [
            "aws_vpc.poc01_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418044666:subnet/subnet-0817a75762a4dd89a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0817a75762a4dd89a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418044666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "poc01-private-subnet-2",
              "environment": "poc01"
            },
            "tags_all": {
              "Name": "poc01-private-subnet-2",
              "environment": "poc01"
            },
            "vpc_id": "vpc-07f595036249ffb37"
          },
          "dependencies": [
            "aws_vpc.poc01_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "poc01_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418044666:vpc/vpc-07f595036249ffb37",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02027f3caef7f31f6",
            "default_route_table_id": "rtb-071bb4d209d854c01",
            "default_security_group_id": "sg-03ece6dd21218b398",
            "dhcp_options_id": "dopt-07272d793cc365e0b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f595036249ffb37",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-071bb4d209d854c01",
            "owner_id": "905418044666",
            "tags": {
              "Name": "poc01-vpc",
              "environment": "poc01"
            },
            "tags_all": {
              "Name": "poc01-vpc",
              "environment": "poc01"
            }
          }
        }
      ]
    }
  ]
}